[gd_scene format=3 uid="uid://2wh7m6d51njo"]

[ext_resource type="Script" uid="uid://ddmwamx26xnnl" path="res://Scripts/controllers/game_controller.gd" id="1_6cj6c"]
[ext_resource type="Texture2D" uid="uid://cchw0nrt5a14n" path="res://Art Assets/backgrounds/bground.png" id="1_84ik8"]
[ext_resource type="FontFile" uid="uid://ctac5wch5ukxl" path="res://Art Assets/VCR_OSD_MONO_1.001.ttf" id="2_bauc0"]
[ext_resource type="Resource" uid="uid://dt04inrds2ohp" path="res://Scripts/Resource/varied/themes/HtmlTheme.tres" id="2_op3ha"]
[ext_resource type="Texture2D" uid="uid://buv67q5krfss" path="res://Art Assets/buttons/stonebutton.png" id="4_6cj6c"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_6cj6c"]
texture = ExtResource("1_84ik8")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_mwbov"]
texture = ExtResource("4_6cj6c")
expand_margin_top = 10.0
expand_margin_bottom = 15.0
region_rect = Rect2(67.8661, 53.960724, 184.1995, 72.08902)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_gdcx5"]
texture = ExtResource("4_6cj6c")
expand_margin_top = 10.0
expand_margin_bottom = 15.0
region_rect = Rect2(67.8661, 53.960724, 184.1995, 72.08902)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_crk3p"]
texture = ExtResource("4_6cj6c")
expand_margin_left = 50.0
expand_margin_top = 10.0
expand_margin_right = 50.0
expand_margin_bottom = 15.0
region_rect = Rect2(67.92622, 53.982002, 184.11021, 72.12353)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_op3ha"]
texture = ExtResource("4_6cj6c")
expand_margin_left = 20.0
expand_margin_top = 15.0
expand_margin_right = 20.0
expand_margin_bottom = 15.0
region_rect = Rect2(67.90838, 53.908474, 184.14914, 72.06175)

[node name="Game" type="Control" unique_id=1127337807]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6cj6c")
quiz = ExtResource("2_op3ha")
color_right = Color(0, 1, 0, 1)
color_wrong = Color(1, 0, 0, 1)

[node name="bg" type="Panel" parent="." unique_id=446373133]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_6cj6c")

[node name="buttons" type="VBoxContainer" parent="." unique_id=628732688]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 121.0
offset_top = -270.0
offset_right = 306.5263
offset_bottom = -120.0
grow_vertical = 0
theme_override_constants/separation = 30

[node name="Back" type="Button" parent="buttons" unique_id=1827962311]
layout_mode = 2
theme_override_colors/font_color = Color(0.9529412, 0.77254903, 0.46666667, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_bauc0")
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = SubResource("StyleBoxTexture_mwbov")
theme_override_styles/pressed = SubResource("StyleBoxTexture_mwbov")
theme_override_styles/hover = SubResource("StyleBoxTexture_mwbov")
theme_override_styles/disabled = SubResource("StyleBoxTexture_mwbov")
text = "BACK"

[node name="Home" type="Button" parent="buttons" unique_id=61323971]
layout_mode = 2
theme_override_colors/font_color = Color(0.9529412, 0.77254903, 0.46666667, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_bauc0")
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = SubResource("StyleBoxTexture_gdcx5")
theme_override_styles/pressed = SubResource("StyleBoxTexture_gdcx5")
theme_override_styles/hover = SubResource("StyleBoxTexture_gdcx5")
theme_override_styles/disabled = SubResource("StyleBoxTexture_gdcx5")
text = "HOME"

[node name="Question" type="VBoxContainer" parent="." unique_id=1594123545]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -805.0
offset_top = 100.0
offset_right = 805.0
offset_bottom = 312.0
grow_horizontal = 2
alignment = 1

[node name="QuestionText" type="Label" parent="Question" unique_id=629019575]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_colors/font_color = Color(0.9529412, 0.77254903, 0.46666667, 1)
theme_override_constants/outline_size = 20
theme_override_constants/shadow_outline_size = 1
theme_override_fonts/font = ExtResource("2_bauc0")
theme_override_font_sizes/font_size = 90
text = "What is HTML mainly used for?"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="QuestionHolder" type="VBoxContainer" parent="." unique_id=494848167]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -323.0
offset_top = 369.0
offset_right = 323.0
offset_bottom = 854.0
grow_horizontal = 2
theme_override_constants/separation = 35

[node name="ButtonOption" type="Button" parent="QuestionHolder" unique_id=1988700224]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_bauc0")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxTexture_crk3p")
theme_override_styles/pressed = SubResource("StyleBoxTexture_crk3p")
theme_override_styles/hover = SubResource("StyleBoxTexture_crk3p")
theme_override_styles/disabled = SubResource("StyleBoxTexture_crk3p")

[node name="ButtonOption2" type="Button" parent="QuestionHolder" unique_id=1125360600]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_bauc0")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxTexture_crk3p")
theme_override_styles/pressed = SubResource("StyleBoxTexture_crk3p")
theme_override_styles/hover = SubResource("StyleBoxTexture_crk3p")
theme_override_styles/disabled = SubResource("StyleBoxTexture_crk3p")

[node name="ButtonOption3" type="Button" parent="QuestionHolder" unique_id=1249537390]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_bauc0")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxTexture_crk3p")
theme_override_styles/pressed = SubResource("StyleBoxTexture_crk3p")
theme_override_styles/hover = SubResource("StyleBoxTexture_crk3p")
theme_override_styles/disabled = SubResource("StyleBoxTexture_crk3p")

[node name="ButtonOption4" type="Button" parent="QuestionHolder" unique_id=1688202038]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_bauc0")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxTexture_crk3p")
theme_override_styles/pressed = SubResource("StyleBoxTexture_crk3p")
theme_override_styles/hover = SubResource("StyleBoxTexture_crk3p")
theme_override_styles/disabled = SubResource("StyleBoxTexture_crk3p")

[node name="GameOver" type="ColorRect" parent="." unique_id=718552909]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 645.3334
offset_top = 363.0
offset_right = -645.3334
offset_bottom = -363.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0)

[node name="Score" type="Label" parent="GameOver" unique_id=988632386]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -76.5
offset_top = -68.5
offset_right = 76.5
offset_bottom = 68.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.9529412, 0.77254903, 0.46666667, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_bauc0")
theme_override_font_sizes/font_size = 100
text = "0/0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Restart" type="Button" parent="GameOver" unique_id=246071339]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -193.0
offset_top = 351.0
offset_right = 193.0
offset_bottom = 420.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.9529412, 0.77254903, 0.46666667, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_bauc0")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxTexture_op3ha")
theme_override_styles/pressed = SubResource("StyleBoxTexture_op3ha")
theme_override_styles/hover = SubResource("StyleBoxTexture_op3ha")
theme_override_styles/disabled = SubResource("StyleBoxTexture_op3ha")
text = "RESTART QUIZ"

[connection signal="pressed" from="buttons/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="buttons/Home" to="." method="_on_home_pressed"]
[connection signal="pressed" from="GameOver/Restart" to="." method="_on_restart_pressed"]
